--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <link rel="stylesheet" href="./indexStyle.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -14,7 +16,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <div class="trans-buttons">
-          <a class="nav-link" href="#"><i class='far fa-list-alt'></i></a>
+          <a class="nav-link" href="#"><i class='fas fa-th'></i></a>
         </div>
       </li>
       <li class="nav-item">
@@ -28,12 +30,12 @@
         </div>
       </li>
       <li class="nav-item">
-        <div class="trans-buttons">
+        <div class="trans-buttons" id="searchField">
           <input type="text" name="search" value=""><i class='fas fa-search showOnInit'></i><i class='fas fa-share showOnFocus'></i><i class='fas fa-times showOnFocus'></i>
         </div>
       </li>
     </ul>
-    <a class="nav-link logo" href="#"><i class='fab fa-trello'></i> TRELLO</a>
+    <a class="nav-link logo" href="#"><i class='fab fa-trello'></i>Trello</a>
     <ul class="navbar-nav d-flex align-items-end">
       <li class="nav-item">
         <div class="trans-buttons">
@@ -52,14 +54,55 @@
       </li>
       <li class="nav-item">
         <div class="trans-buttons">
-          <a href="#" style="border: none;"><img src="https://www.w3schools.com/howto/img_avatar.png" style="height: 100%; border-radius: 50%;" alt="avatar"></a>
+          <a href="#" style="border: none; display: block;"><img src="https://www.w3schools.com/howto/img_avatar.png" style="height: 100%; border-radius: 50%;" alt="avatar"></a>
         </div>
       </li>
     </ul>
   </nav>
-
-  <nav>
-
+  <nav class="navbar navbar-expand secondarynav">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <div class="trans-buttons">
+          <span id="boardName">Trello Clone</span>
+          <a class="nav-link" href="#"><i class='far fa-star'></i></a>
+        </div>
+      </li>
+      <span class="ml-1 mr-1">|</span>
+      <li class="nav-item ml-1 mr-1">
+        <div class="trans-buttons">
+          <span>Private Team</span>
+        </div>
+      </li>
+      <span class="ml-1 mr-1">|</span>
+      <li class="nav-item">
+        <div class="trans-buttons">
+          <a class="nav-link" style="font-weight: normal;" href="#"> <i class='fa fa-group'></i> Team Visible</a>
+        </div>
+      </li>
+      <span class="ml-1 mr-1">|</span>
+      <li>
+      <div class="trans-buttons">
+        <!-- account avatars here -->
+      </div>
+      </li>
+      <li class="nav-item ml-1">
+        <div class="trans-buttons">
+          <a class="nav-link" style="font-weight: normal;" href="#">Invite</a>
+        </div>
+      </li>
+    </ul>
+    <ul class="navbar-nav d-flex align-items-end">
+      <li class="nav-item">
+        <div class="trans-buttons">
+          <a class="nav-link" style="font-weight: normal;" href="#"><i class='fas fa-concierge-bell'></i> Butler (1 Tip) </a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <div class="trans-buttons">
+          <a class="nav-link" style="font-weight: normal;" href="#">&bull;&bull;&bull; Show Menu</a>
+        </div>
+      </li>
+    </ul>
   </nav>
   <div class="">
 
