made list modal fancier

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p class="modal-btn">Add Card</p>
     <p class="modal-btn">Copy List</p>
     <p class="modal-btn">Move List</p>
-    <p  class="modal-btn" id="archive-btn">Archive</p>
+    <p class="modal-btn" id="archive-btn" data-id="" onclick="archiveList(this)">Archive</p>
   </div>
   <div class="navs-div">
     <!-- first nav -->
