--- a/index.html
+++ b/index.html
@@ -116,8 +116,14 @@
     </nav>
   </div>
   <!-- display area -->
-  <div class="list-wrapper text-light d-flex flex-row px-2 pr-3">
-  <!-- data displays here -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12">
+        <div class="list-wrapper text-light d-flex flex-row px-3">
+          <!-- data displays here -->
+        </div>
+      </div>
+    </div>
   </div>
   <script type="text/javascript" src="./app.js"></script>
 </body>
