added loading feature

--- a/index.html
+++ b/index.html
@@ -44,7 +44,15 @@
           </div>
         </li>
       </ul>
-      <a class="nav-link logo" href="#"><i class='fab fa-trello'></i>Trello</a>
+      <a class="nav-link logo" id="logo" style="display: block;" href="#"><i class='fab fa-trello'></i>Trello</a>
+      <div class="logo loadingio-spinner-bars-188ysby1s6c" id="loader" style="display: none;">
+        <div class="ldio-vzmgqagqusi">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
       <ul class="navbar-nav d-flex align-items-end">
         <li class="nav-item">
           <div class="trans-buttons">
