added MOCK card data modal

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+  <div class="cardmodal-wrapper" style="display: none;" onclick="closeCard()">
+    <div class="cardmodal text-center">
+
+    </div>
+  </div>
   <div class="type-modal listmenu-modal d-flex flex-column align-items-stretch text-center" style="z-index: -999; opacity: 0;">
     <p class="modal-btn">Add Card</p>
     <p class="modal-btn">Copy List</p>
