improved light fonts

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <div class="list-wrapper text-light d-flex flex-row px-3">
+        <div class="list-wrapper d-flex flex-row px-3">
           <!-- data displays here -->
         </div>
       </div>
