--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <div class="trans-buttons" id="searchField">
+          <div class="trans-buttons d-inline-flex" id="searchField">
             <input type="text" name="search" value=""><i class='fas fa-search showOnInit'></i><i class='fas fa-share showOnFocus'></i><i class='fas fa-times showOnFocus'></i>
           </div>
         </li>
